--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -143,6 +143,18 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Repositories\ITransactableRepository.cs">
       <Link>Repositories\ITransactableRepository.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\IPaginatedRepository.cs">
+      <Link>Repositories\IPaginatedRepository.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\PaginatedRepository.cs">
+      <Link>Repositories\PaginatedRepository.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\IPaginatedResult.cs">
+      <Link>Repositories\IPaginatedResult.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\PaginatedResult.cs">
+      <Link>Repositories\PaginatedResult.cs</Link>
+    </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Exceptions\ItemNotFoundException.cs">
       <Link>Exceptions\ItemNotFoundException.cs</Link>
     </Compile>
@@ -175,6 +187,9 @@
     </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Extensions\TokenExtensions.cs">
       <Link>Extensions\TokenExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Extensions\QueryableExtensions.cs">
+      <Link>Extensions\QueryableExtensions.cs</Link>
     </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Managers\CustomUserManager.cs">
       <Link>Managers\CustomUserManager.cs</Link>
