Added Converter Tests.

--- a/tests/za.co.grindrodbank.a3s.tests/za.co.grindrodbank.a3s.tests.csproj
+++ b/tests/za.co.grindrodbank.a3s.tests/za.co.grindrodbank.a3s.tests.csproj
@@ -41,6 +41,7 @@
     <Folder Include="Extensions\" />
     <Folder Include="Helpers\" />
     <Folder Include="ContentFormatters\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\za.co.grindrodbank.a3s\za.co.grindrodbank.a3s.csproj" />
