--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - image: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
     working_directory: ~/build
     steps:
-      # Update, upgrade, then install git and openssh for a clean checkout $CIRCLE_BRANCH
+      # Update, upgrade, then install git and openssh for a clean checkout
       - run: apk update
       - run: apk upgrade
       - run: apk --no-cache add --update git openssh openjdk8
@@ -51,7 +51,7 @@ jobs:
             -o:"$SONAR_ORG" \
             -d:sonar.host.url=https://sonarcloud.io \
             -d:sonar.login="$SONAR_AUTH_TOKEN" \
-            -d:sonar.branch.name=master \
+            -d:sonar.branch.name=$CIRCLE_BRANCH \
             -d:sonar.test.inclusions="tests/**/*" \
             -d:sonar.sourceEncoding=UTF-8 \
             -d:sonar.exclusions=**/Data/**,**/Migrations/**,**/wwwroot/**,**/A3SApiResources/**,**/AbstractApiControllers/**,**/Models/**,**/Repositories/**,**/db/**,**/Views/**,**/shared-libraries/**,**/ConnectionClients/**,**/Quickstart/Consent/**,**/Quickstart/Device/**,**/Quickstart/Grants/**,**/Quickstart/Diagnostics/** \
