--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -179,16 +179,16 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
-						<!--<configuration>
-							<gpgArguments>
-								<arg>- -batch</arg>
-								<arg>- -no-tty</arg>
-								<arg>- -pinentry-mode</arg>
+						<configuration>
+							 <gpgArguments>
+								<!--<arg>- -batch</arg>
+								<arg>- -no-tty</arg>-->
+								<arg>--pinentry-mode</arg>
 								<arg>loopback</arg>
-								<arg>- -command-fd</arg>
-								<arg>0</arg>
-							</gpgArguments>
-						</configuration> -->					
+								<!--<arg>- -command-fd</arg>
+								<arg>0</arg>-->
+							</gpgArguments> 
+						</configuration> 	-->			
 					</execution>
 				</executions>
 			</plugin>
