fix - dangling xml close comment

--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -188,7 +188,7 @@
 								<!--<arg>- -command-fd</arg>
 								<arg>0</arg>-->
 							</gpgArguments> 
-						</configuration> 	-->			
+						</configuration> 				
 					</execution>
 				</executions>
 			</plugin>
