--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -188,7 +188,9 @@
 								<!--<arg>- -command-fd</arg>
 								<arg>0</arg>-->
 							</gpgArguments> 
-						</configuration> 				
+						</configuration> 
+						<keyname>4938B9AEA58854CEA23B57B459CEC294560F9686</keyname><!--TODO: make this a param-->
+						<passphrase>${env.GPG_PASSPHRASE}</passphrase>		
 					</execution>
 				</executions>
 			</plugin>
