--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -95,6 +95,7 @@
 					<arguments>-Dgpg.passphrase=${env.GPG_PASSPHRASE}</arguments>
 					<checkModificationExcludes>
 						<checkModificationExclude>pom.xml</checkModificationExclude>
+						<checkModificationExclude>maven-settings.xml</checkModificationExclude>
 					</checkModificationExcludes>
 				</configuration>
 				<dependencies>
