--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>za.co.grindrodbank</groupId>
 	<artifactId>security</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>security</name>
@@ -203,7 +203,7 @@
 		<connection>scm:git:git://github.com/GrindrodBank/A3S.git</connection>
 		<developerConnection>scm:git:git@github.com:GrindrodBank/A3S.git</developerConnection>
 		<url>https://github.com/GrindrodBank/A3S</url>
-		<tag>security-0.0.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
