--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -7,12 +7,14 @@
     **************************************************
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project 	xmlns="http://maven.apache.org/POM/4.0.0" 
+			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>za.co.grindrodbank</groupId>
 	<artifactId>security</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.5</version>
 	<packaging>jar</packaging>
 
 	<name>security</name>
@@ -21,7 +23,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>		<!-- NOTE: if this is upgraded make sure to correct/check on the overidden versions within <dependencyManagement> section of pom -->
+		<version>2.1.8.RELEASE</version>		
+		<!-- NOTE: if this is upgraded make sure to correct/check on the overidden versions within <dependencyManagement> section of pom -->
 		<relativePath />
 		<!-- lookup parent from repository -->
 	</parent>
@@ -30,7 +33,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-        <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
 	</properties>
 
 	<dependencies>
@@ -52,13 +54,13 @@
 			<scope>test</scope>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
 			<version>2.0.0</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
@@ -70,43 +72,7 @@
 
 	<build>
 		<plugins>
-
-			<!-- <plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-				<executions>
-					<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-				<configuration>
-					<localCheckout>true</localCheckout>
-					<pushChanges>false</pushChanges>
-					<mavenExecutorId>forked-path</mavenExecutorId>
-					<arguments>-Dgpg.passphrase=${env.GPG_PASSPHRASE}</arguments>
-					<checkModificationExcludes>
-						<checkModificationExclude>pom.xml</checkModificationExclude>
-						<checkModificationExclude>maven-settings.xml</checkModificationExclude>
-					</checkModificationExcludes>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.9.5</version>
-					</dependency>
-				</dependencies>
-			</plugin> -->
-
+			<!-- we are publishing to maven central via OSSRH nexus-->
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -114,69 +80,43 @@
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
+					<!-- see auth info for ossrh specified in ./maven-settings.xml -->
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
 
-
-			<!-- <plugin>
+			<!-- we are attaching sources -->
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>2.2.1</version>
 				<executions>
 					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
+					<id>attach-sources</id>
+					<goals>
+						<goal>jar-no-fork</goal>
+					</goals>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
 
-			<!-- <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-gpg-plugin</artifactId>
-			<version>1.5</version>
-			<executions>
-				<execution>
-				<id>sign-artifacts</id>
-				<phase>verify</phase>
-				<goals>
-					<goal>sign</goal>
-				</goals>
-				</execution>
-			</executions>
-			</plugin> -->
+			<!-- we are attaching javadocs -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+					<id>attach-javadocs</id>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+					</execution>
+				</executions>
+			</plugin>
 
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-source-plugin</artifactId>
-      <version>2.2.1</version>
-      <executions>
-        <execution>
-          <id>attach-sources</id>
-          <goals>
-            <goal>jar-no-fork</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-javadoc-plugin</artifactId>
-      <version>2.9.1</version>
-      <executions>
-        <execution>
-          <id>attach-javadocs</id>
-          <goals>
-            <goal>jar</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
-
-
+			<!-- we are signing artifacts for publishing -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
@@ -189,18 +129,14 @@
 							<goal>sign</goal>
 						</goals>
 						<configuration>
-							 <gpgArguments>
-								<!--<arg>- -batch</arg>
-								<arg>- -no-tty</arg>-->
+							<gpgArguments>
+								<!-- allow running in pipeline without tty prompts: -->
 								<arg>--pinentry-mode</arg>
 								<arg>loopback</arg>
-								<!--<arg>- -command-fd</arg>
-								<arg>0</arg>-->
-							</gpgArguments> 
-						<keyname>4938B9AEA58854CEA23B57B459CEC294560F9686</keyname><!--TODO: make this a param-->
-						<passphrase>${env.GPG_PASSPHRASE}</passphrase>	
+							</gpgArguments>
+							<keyname>${env.GPG_KEYNAME}</keyname>
+							<passphrase>${env.GPG_PASSPHRASE}</passphrase>	
 						</configuration> 
-	
 					</execution>
 				</executions>
 			</plugin>
@@ -218,12 +154,7 @@
 		<snapshotRepository>
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<!-- <repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
-			</url>
-		</repository> -->
+		</snapshotRepository>>
 	</distributionManagement>
 
 </project>
