change shared-lib version to prevent pushing latest to maven central

--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -14,7 +14,8 @@
 
 	<groupId>za.co.grindrodbank</groupId>
 	<artifactId>security</artifactId>
-	<version>0.0.5</version>
+	<!--<version>0.0.5</version>-->
+	<version>0.0.0.2</version><!-- verify workflow -->
 	<packaging>jar</packaging>
 
 	<name>security</name>
