--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,15 @@ jobs:
     docker:
       - image: maven:3.5.3-jdk-8-alpine
     steps:
-      # Update, upgrade, then install git and openssh 
+      - run:
+          name: verify GPG_KEY_B64 is set for publish-java-libs
+          command: '[ -n "$GPG_KEY_B64" ] || { echo "no base64 encoded GPG key supplied"; exit 1; }'
+      - run:
+          name: verify OSSRH_USERNAME is set for publish-java-libs
+          command: '[ -n "$OSSRH_USERNAME" ] || { echo "no OSSRH username supplied"; exit 1; }' 
+      - run:
+          name: verify OSSRH_PASSWORD is set for publish-java-libs
+          command: '[ -n "$OSSRH_PASSWORD" ] || { echo "no OSSRH password supplied"; exit 1; }'      # Update, upgrade, then install git and openssh 
       # as the container doesn't have these installed
       # and we are using parameters to the checkout command 
       # to be able to build in a non-standard location
