--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,8 @@ jobs:
           command: '[ -n "$OSSRH_USERNAME" ] || { echo "no OSSRH username supplied"; exit 1; }' 
       - run:
           name: verify OSSRH_PASSWORD is set for publish-java-libs
-          command: '[ -n "$OSSRH_PASSWORD" ] || { echo "no OSSRH password supplied"; exit 1; }'      # Update, upgrade, then install git and openssh 
+          command: '[ -n "$OSSRH_PASSWORD" ] || { echo "no OSSRH password supplied"; exit 1; }'      
+      # Update, upgrade, then install git and openssh 
       # as the container doesn't have these installed
       # and we are using parameters to the checkout command 
       # to be able to build in a non-standard location
