--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -40,6 +40,8 @@
   <ItemGroup>
     <Content Remove="Views\Device\UserCodeCapture.cshtml" />
     <Content Remove="Views\Device\Success.cshtml" />
+    <Content Remove="wwwroot\fonts\SourceSansPro-Italic.ttf" />
+    <Content Remove="wwwroot\img\a3s.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config">
