Updated the transient roles migration to now contain UUIDs for changed by. Fixed as many tests as possible within the role service and role controller unit tests. Updated the OAS3 specification such that creating a role returns the transient version of the role, not a role. Updated the IDS4 csproj to reference the newly added transient role models and base transient classes. Added a new auto-mapper profile for mapping between roleTransient models and the roleTransient API resource. Update the role service to now create a new transient role upon role creation.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Net.Security" Version="4.3.2" />
+    <PackageReference Include="Stateless" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -132,6 +133,12 @@
     </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Models\ProfileTeamModel.cs">
       <Link>Models\ProfileTeamModel.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\RoleTransientModel.cs">
+      <Link>Models\RoleTransientModel.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\TransientStateMachineRecord.cs">
+      <Link>Models\TransientStateMachineRecord.cs</Link>
     </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmApplicationDataPolicyModel.cs">
       <Link>Models\SubRealmApplicationDataPolicyModel.cs</Link>
