--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -49,7 +49,13 @@
     <Compile Remove="Models\TermsOfServiceUserAcceptance.cs" />
   </ItemGroup>
   <ItemGroup>
-	  <Compile Include="..\za.co.grindrodbank.a3s\Models\ConsentOfServiceModel.cs">
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\IConsentOfServiceRepository.cs">
+      <Link>Repositories\IConsentOfServiceRepository.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Repositories\ConsentOfServiceRepository.cs">
+      <Link>Repositories\ConsentOfServiceRepository.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\ConsentOfServiceModel.cs">
       <Link>Models\ConsentOfServiceModel.cs</Link>
     </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Models\ConsentOfServiceUserAcceptanceModel.cs">
